Fix mvc concept